--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
     "prestart": "npm run build",
     "dev": "nodemon",
     "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -r ts-node/register src/test/**/*.spec.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.7",
@@ -19,16 +19,22 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/chai-http": "^4.2.0",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mocha": "^8.0.3",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.11.1",
     "@types/sqlite3": "^3.1.6",
     "@types/validator": "^13.1.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
     "tslint": "^6.1.3",
     "typescript": "^3.9.7"
