--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
-name: CI
+name: Testrunner - BE
 
 on:
   push:
-    branches: [ master,  ]
+    branches: [ master ]
   pull_request:
     branches: [ master ]
     
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [8.x, 10.x, 12.x, 14.x]
+        node-version: [14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -21,8 +21,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd \backend\ && npm install
-    - run: cd \backend\ && npm run build --if-present
-    - run: cd \backend\ && npm test
+    - run: cd .\backend\ && npm ci
+    - run: cd .\backend\ && npm run build --if-present
+    - run: cd .\backend\ && npm test
       env:
         CI: true
