--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: ls 
     - run: cd backend\ && npm ci
     - run: cd .\backend\ && npm run build --if-present
     - run: cd .\backend\ && npm test
