--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,9 +21,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: ls && cd backend && ls
-    - run: cd backend\ && npm ci
-    - run: cd .\backend\ && npm run build --if-present
-    - run: cd .\backend\ && npm test
+    - run: cd backend && ls && npm ci
+    - run: ls && npm run build --if-present
+    - run: npm test
       env:
         CI: true
