change npm ci to npm install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd backend && ls && npm ci
+    - run: cd backend && ls && npm install
     - run: ls && npm run build --if-present
     - run: npm test
       env:
