--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,8 +21,8 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: cd backend && ls && npm install
-    - run: ls && npm run build --if-present
-    - run: npm test
+    - run: cd backend && npm install
+    - run: cd backend && npm run build --if-present
+    - run: cd backend && npm test
       env:
         CI: true
