activate Testrunner - BE on PR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
     paths-ignore: [ 'docs/**', 'frontend/**', 'deliverables/**', '.github/**' ]
   pull_request:
     branches: [ master ]
-    paths-ignore: [ 'docs/**', 'frontend/**', 'deliverables/**', '.github/**', 'backend/**' ]
+    paths-ignore: [ 'docs/**', 'frontend/**', 'deliverables/**', '.github/**' ]
     
 jobs:
   build:
