--- a/backend/package.json
+++ b/backend/package.json
@@ -9,12 +9,13 @@
     "prestart": "npm run build",
     "dev": "nodemon",
     "start": "node .",
-    "test": "mocha -r ts-node/register src/test/**/*.spec.ts"
+    "test": "cross-env NODE_ENV=test cross-env JWT_SECRET=not_secure mocha -r ts-node/register src/test/**/*.spec.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.7",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.2",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
