--- a/backend/package.json
+++ b/backend/package.json
@@ -13,13 +13,16 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.7",
+    "@types/mock-req-res": "^1.1.3",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
+    "mock-req-res": "^1.2.0",
     "morgan": "~1.9.1",
     "sequelize": "^6.3.5",
+    "sinon": "^9.2.0",
     "sqlite3": "^5.0.0",
     "ts-node": "^9.0.0"
   },
