--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/cors": "^2.8.7",
     "@types/mock-req-res": "^1.1.3",
+    "@types/nodemailer": "^6.4.0",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
