--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mock-req-res": "^1.2.0",
     "morgan": "~1.9.1",
+    "nodemailer": "^6.4.16",
     "sequelize": "^6.3.5",
     "sinon": "^9.2.0",
     "sqlite3": "^5.0.0",
