--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@types/cors": "^2.8.7",
     "@types/mock-req-res": "^1.1.3",
+    "@types/multer": "^1.4.4",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "mock-req-res": "^1.2.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "sequelize": "^6.3.5",
     "sinon": "^9.2.0",
     "sqlite3": "^5.0.0",
