--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,12 @@
     "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
     "build": "tsc",
     "prestart": "npm run build",
-    "dev": "nodemon",
+    "dev": "nodemo/exitn",
     "start": "node .",
     "test": "cross-env NODE_ENV=test cross-env JWT_SECRET=not_secure JWT_PW_SECRET=password_securator mocha -r ts-node/register src/test/**/*.spec.ts"
   },
   "dependencies": {
-    "@types/cors": "^2.8.7",
+    "@types/cors": "^2.8.8",
     "@types/mock-req-res": "^1.1.3",
     "@types/multer": "^1.4.4",
     "@types/nodemailer": "^6.4.0",
@@ -33,10 +33,10 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/chai-http": "^4.2.0",
-    "@types/express": "^4.17.8",
+    "@types/express": "^4.17.9",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mocha": "^8.0.3",
-    "@types/morgan": "^1.9.1",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.3",
     "@types/sqlite3": "^3.1.6",
     "@types/validator": "^13.1.0",
