update testrunnter-fe.yaml file to match fe branches

--- a/.github/workflows/testrunner-fe.yml
+++ b/.github/workflows/testrunner-fe.yml
@@ -2,7 +2,7 @@ name: Testrunner - FE
 
 on:
   push:
-    branches: [ master, 'frontend-**' ]
+    branches: [ master, 'frontend-**', 'frontend_**' ]
     paths-ignore: [ 'docs/**', 'backend/**', 'deliverables/**', '.github/**' ]
   pull_request:
     branches: [ master ]
