--- a/.github/workflows/testrunner-fe.yml
+++ b/.github/workflows/testrunner-fe.yml
@@ -2,7 +2,7 @@ name: Testrunner - FE
 
 on:
   push:
-    branches: [ master, 'frontend-**', 'frontend_**' ]
+    branches: [ master, 'frontend-**','frontend_enhance_testing', 'frontend_**' ]
     paths-ignore: [ 'docs/**', 'backend/**', 'deliverables/**', '.github/**' ]
   pull_request:
     branches: [ master ]
